--- a/parser/package.json
+++ b/parser/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
+    "server": "ts-node src/api/server.ts",
+    "server:dev": "nodemon --exec ts-node src/api/server.ts",
     "test": "jest",
     "validate": "ts-node src/cli.ts validate",
     "execute": "ts-node src/cli.ts execute",
@@ -19,12 +21,18 @@
     "ajv-formats": "^2.1.1",
     "commander": "^11.0.0",
     "chalk": "^4.1.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/lodash": "^4.14.195",
     "@types/jest": "^29.5.0",
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13",
+    "@types/multer": "^1.4.7",
     "typescript": "^5.0.0",
     "ts-node": "^10.9.0",
     "nodemon": "^3.0.0",
